internal class AnimationStrings
{
    internal static readonly string isMoving = "IsMoving";
    internal static readonly string isGrounded = "IsGrounded";
    internal static readonly string yVelocity = "yVelocity";
    internal static readonly string jumpTrigger = "Jump";
    internal static readonly string isOnWall = "IsOnWall";
    internal static readonly string isOnCeiling = "IsOnCeiling";
    internal static readonly string groundAttackTrigger = "Attack";
    internal static readonly string canMove = "CanMove";
    internal static readonly string hasTarget = "HasTarget";
    internal static readonly string isAlive =  "IsAlive";
    internal static readonly string isHit = "IsHit";
    internal static readonly string hitTrigger = "Hit";
    internal static readonly string lockVelocity = "LockVelocity";
    internal static readonly string attackCooldown = "AttackCooldown";
    internal static readonly string rangedAttack = "RangedAttack";
    internal static readonly string ultimate = "Ultimate";
    internal static readonly string roll = "Roll";
    internal static readonly string isBlock = "BlockUlt";
}

